web/client/style.css
.topcards-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

.card-small-text {
  font-size: 1.5em;
  font-weight: 600;
  margin: 0 0 1rem 0; /* top right bottom left */
  /* margin-top: 2rem;
    margin-bottom: 1rem; */
}

.text-center-positioning {
  margin: 1rem 0 1rem 0;
  text-align: center;
}

.card-small-image {
  aspect-ratio: 1;
  border-radius: 100vh;
  width: 8rem;
  height: 8rem;
  margin: 1rem 0 1rem 0;
}

.link-list {
  display: flex;
  flex-direction: column;
  gap: 1rem;
  font-weight: 600;
}

.link-list a {
  color: var(--colour-accent);
}

.div-center {
  margin: auto;
}

.small-cards-wrapper-center {
  display: flex;
  flex-wrap: wrap;
  gap: 1rem;
  justify-content: center;
}

.flex-col-center {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  height: 90%;
}

.client-details-wrap {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(35ch, 1fr));
  gap: 1rem;
  justify-items: center;
  margin: 1rem 1rem; /* top right bottom left */
}

.card-bigger {
  min-width: 35ch;
}

#client-web span {
  font-size: 1em;
}

